# Agent-Trade

./: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  IMPORT_DATA_INSTRUCTIONS.md  MAKEFILE_EXAMPLES.md  ML_STUDIO_README.md  Makefile  README.md  README_DOCKER.md  create_admin_direct.py  create_admin_local.py  create_admin_simple.py  create_all_tables.py  create_tables.py  create_tables_docker.py  create_tables_docker_container.py  crypto_trading_agent.py  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  example_usage.py  export_data_db_to_csv.py  generate_trans.py  multi_agent_ensemble.py  nginx.conf  pyproject.toml  run_app_simple.py  run_celery_worker.py  run_trading_system.py  test_db.py  test_frontend_integration.py  test_metrics_simple.py  test_minimal_app.py  test_train.py  test_train_trade.py  test_ui_integration.py  test_ui_simple.py  trading_agent_notebook.py  (+2 more)
frontend/: Dockerfile.dev  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
scripts/: create_admin.py
settings/: alert_rules.yml  alertmanager.yml  dev.env  local.env  prometheus.yml
ssl/: cert.pem
tests/: conftest.py  test_agent_schema_enum.py  test_agents.py  test_auth.py  test_auth_simple.py  test_billing.py  test_celery_tasks_simple.py  test_database_models.py  test_database_models_simple.py  test_e2e_monitoring.py  test_e2e_workflow.py  test_metrics.py  test_metrics_isolated.py  test_metrics_isolated_simple.py  test_metrics_simple.py  test_migration_unified_train_fields.py  test_ml_api_endpoints.py  test_ml_basic.py  (+30 more)
(+213 files in other folders)
