[tool.poetry]
name = "agent-trade"
version = "1.0.0"
description = ""
authors = ["igornet0"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pydantic = {extras = ["email"], version = "^2.11.7"}
pydantic-settings = ">=2.8.1,<3.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
async-kucoin-python = { git = "https://github.com/igornet0/async-kucoin-python-sdk.git", branch = "master" }
fastapi = {extras = ["standard"], version = "^0.115.13"}
uvicorn = "^0.34.3"
asyncpg = "^0.30.0"
alembic = "^1.16.2"
passlib = "^1.7.4"
pillow = "^11.2.1"
pyyaml = "^6.0.2"
pandas = "^2.3.0"
aiofiles = "^24.1.0"
greenlet = "^3.2.3"
jinja2 = "^3.1.6"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
python-multipart = "^0.0.20"
einops = "^0.8.1"
coremltools = { version = "^8.3.0", markers = "sys_platform == 'darwin'" }
torch = "^2.7.1"
pyobjc = { version = "^11.1", markers = "sys_platform == 'darwin'" }
numpy = "^2.3.0"
scipy = "^1.15.3"
accelerate = "^1.8.1"
bcrypt = "^4.3.0"
nltk = "^3.9.1"
pika = "^1.3.2"
flower = "^2.0.1"
celery = "^5.5.3"
transformers = "^4.52.4"
matplotlib = "^3.10.3"
aio-pika = "^9.5.5"
prometheus-client = "^0.20.0"
streamlit = "^1.36.0"
plotly = "^5.24.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.3"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
